# benches

./: .gitignore  BENCHMARK_INCOMPATIBILITIES.md  Makefile  OXCAML_INCOMPATIBILITIES.md  README.md  SANDMARK_ADAPTATIONS.md
binarytrees/: binarytrees.ml
fannkuchredux/: fannkuchredux.build.sh
kb/: kb.build.sh  kb_no_exc.build.sh
lib/: opam_auto_install.sh
markbench/: markbench.ml
multicore/alloc_multicore/: alloc_multicore.build.sh
multicore/graph500par/: graph500par.build.deps.sh  kernel1_run_multicore.build.sh
multicore/multicore-effects/: algorithmic_differentiation.build.sh  algorithmic_differentiation.ml  effect_throughput_perform.build.sh  effect_throughput_perform.ml  effect_throughput_perform_drop.build.sh  effect_throughput_perform_drop.ml  effect_throughput_val.build.sh  effect_throughput_val.ml  eratosthenes.build.sh  eratosthenes.ml  rec_eff_ack.build.sh  rec_eff_ack.ml  rec_eff_evenodd.build.sh  rec_eff_evenodd.ml  rec_eff_fib.build.sh  rec_eff_fib.ml  rec_eff_motzkin.build.sh  rec_eff_motzkin.ml  rec_eff_sudan.build.sh  rec_eff_sudan.ml  rec_eff_tak.build.sh  rec_eff_tak.ml  rec_seq_ack.build.sh  rec_seq_evenodd.build.sh  rec_seq_fib.build.sh  rec_seq_motzkin.build.sh  rec_seq_motzkin.ml  rec_seq_sudan.build.sh  rec_seq_tak.build.sh
multicore/multicore-gcroots/: dune  globroots_mp.build.sh  globroots_seq.build.sh  globroots_sp.build.sh
numerical-analysis/: levinson_durbin.build.sh  qr_decomposition.build.sh
soli/: soli.build.sh
with_deps/graph500seq/: dune  graph500seq.build.deps.sh  graph500seq.build.sh  graphTypes.ml
(+126 files in other folders)
